--- a/styles/enviar.css
+++ b/styles/enviar.css
@@ -1,29 +1,123 @@
-
-
-body{
-
-    background-color: rgb(16, 0, 80);
-    color: rgb(197, 188, 188);
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 15px;
-
-}
-
-.biblioteca{
-
-    text-decoration: none;
-   
-
-}
-
-
-.botao {
-    background-color: var(--fundo-cabeçalho);
-    width: 180px;   
-    height: 290px;  
-    border-radius: 12px;  
-    box-shadow: 4px 4px 12px #000; 
-    align-items: center;
-    margin: 30px;
-}
+:root {
+    --cor-de-fundo: rgb(16, 0, 80);
+    --cor-letra-fundo: rgb(197, 188, 188);
+    --fundo-cabeçalho:rgb(214, 211, 211);
+    --vermelho:rgb(175, 31, 31);
+    --cor-inicio:  rgb(56, 58, 79);
+    --sombra: rgb(6, 20, 41);
+  }
+  
+  * {
+  
+      margin: 0;
+      padding: 0;
+  }
+  
+  body{
+  
+      background-color:var(--cor-de-fundo);
+      color: var(--cor-letra-fundo);
+      
+      
+  
+  }
+  
+  .container{
+  
+      max-width: 1080px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+  
+  }
+  
+  
+  header{
+  
+      background-color: var(--fundo-cabeçalho);
+      color: var(--vermelho); 
+      width: 100%;
+      padding: 10px;
+      margin: 0px;
+  
+  }
+  
+  
+  .Bem-vindo{
+  
+      width: 40%;
+      font-size: 27px;
+  
+  }
+  
+  
+  
+  .opções {
+      font-size: 40px;
+      margin-inline: 520px;
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow:row wrap;
+      
+  
+  }
+  
+  .linha {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow:row wrap;
+     
+      
+  }
+  
+  .card {
+      background-color: var(--fundo-cabeçalho);
+      width: 180px;   
+      height: 290px;  
+      border-radius: 12px;  
+      box-shadow: 4px 4px 12px #000; 
+      align-items: center;
+      margin: 30px;
+      
+     
+    }
+  
+    .card:hover {
+      box-shadow: 6px 6px 12px #367ec2;
+      transition: .2s;
+  
+    }
+  
+  
+  
+    .card img {
+      margin-left: 8px;
+      margin-top: 5px;
+    }
+    
+    
+    
+   .card button{
+      background-color: var(--cor-de-fundo);
+      height: 30px;
+      border: none;   
+      padding: 4px;   
+      width: 80%;
+      font-size: 15px;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-left: 16px;
+    
+  
+    }
+  
+    a {
+      color: #ffffff;
+      text-decoration: none;
+    }
+  
