--- a/styles/enviar.css
+++ b/styles/enviar.css
@@ -49,11 +49,12 @@
   
       width: 40%;
       font-size: 27px;
+      text-align: center;
   
   }
   
   
-  
+
   .opções {
       font-size: 40px;
       margin-inline: 520px;
@@ -77,7 +78,7 @@
   
   .card {
       background-color: var(--fundo-cabeçalho);
-      width: 180px;   
+      width: 250px;   
       height: 290px;  
       border-radius: 12px;  
       box-shadow: 4px 4px 12px #000; 
