--- a/styles/enviar.css
+++ b/styles/enviar.css
@@ -84,6 +84,7 @@
       box-shadow: 4px 4px 12px #000; 
       align-items: center;
       margin: 30px;
+      display: inline;
       
      
     }
